--- a/k8s/kubernetes/PKGBUILD
+++ b/k8s/kubernetes/PKGBUILD
@@ -3,41 +3,52 @@
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
 
 pkgbase=kubernetes
-pkgname=('kube-apiserver' 'kube-controller-manager' 'kube-proxy' 'kube-scheduler' 'kubectl' 'kubelet' 'kubeadm')
-pkgver=1.22.1
-pkgrel=1
+pkgname=(
+  kube-apiserver
+  kube-controller-manager
+  kube-proxy
+  kube-scheduler
+  kubeadm
+  kubectl
+  kubelet
+  kubernetes-control-plane-common
+)
+pkgver=1.23.6
+pkgrel=2
 pkgdesc="Production-Grade Container Scheduling and Management"
 arch=(x86_64 powerpc64le)
 url="https://kubernetes.io/"
-license=("Apache")
-depends=('glibc')
-makedepends=('cni-plugins' 'conntrack-tools' 'ethtool' 'git' 'go' 'go-bindata'
-             'go-md2man' 'iptables-nft' 'socat' 'rsync')
-source=("https://github.com/kubernetes/kubernetes/archive/v${pkgver}/kubernetes-${pkgver}.tar.gz"
-        "${pkgbase}-1.20.0-gotags.patch"
-        "10-kubeadm-kubelet.conf"
-        "50-kubelet-sysctl.conf"
-        "kubelet-modules.conf"
-        "kubelet.env"
-        "kubelet.service"
-        "kubernetes-sysusers.conf"
-        "kubernetes-tmpfiles.conf"
-        "kube-apiserver.env"
-        "kube-apiserver.service"
-        "kube-controller-manager.env"
-        "kube-controller-manager.service"
-        "kube-proxy.env"
-        "kube-proxy.service"
-        "kube-scheduler.env"
-        "kube-scheduler.service"
+license=(Apache)
+makedepends=(cni-plugins conntrack-tools ethtool git go go-md2man iptables-nft
+socat rsync)
+source=(
+  https://github.com/$pkgbase/$pkgbase/archive/v$pkgver/$pkgbase-$pkgver.tar.gz
+  $pkgbase-1.23.0-gotags.patch
+  $pkgbase-1.23.0-static_cgo_enabled.patch
+  10-kubeadm-kubelet.conf
+  50-kubelet-sysctl.conf
+  kubelet-modules.conf
+  kubelet.env
+  kubelet.service
+  $pkgbase-sysusers.conf
+  $pkgbase-tmpfiles.conf
+  kube-apiserver.env
+  kube-apiserver.service
+  kube-controller-manager.env
+  kube-controller-manager.service
+  kube-proxy.env
+  kube-proxy.service
+  kube-scheduler.env
+  kube-scheduler.service
 )
-sha512sums=('97d5644cd06c2a092338bddc6b5e5b4c538ae8055b5d7c9ea011a8454b191714864ab624657e88aa1d6e8939d1526a69d763b0126249bfbb5e96f62ecf4290a3'
-            'a2c97738fb49c0e30eee44b6404af083bbaddbafb8a3fa92493802065f4ac06f0c09d50437a9fdda345e0365de984d9bc768fb9300a40c716e6dec53bd57b6de'
+sha512sums=('b351556267c21a6691bced0c837e259425bb3a9f47e0dfe995e27c8d78a48eaa29dca34928ec5898cbe59e80976a6b76ae3e85aeb4eeb79339ecf19c94a9dab7'
+            'da59a9d6e3fd9625d2803e441f6f06c8b272ee5a220eb32426f09245e62c5f19bda324a752ead05111471f7ccd11fe9777630ae9b7ae387fcd94f65a7f1ed5b8'
+            'affcabbceadddb3f4178b9fba3e15f06bc6a21a6aa1c7b37c48defd1a81f674bc20198458ca7afdf1d979e2175d12648a70bb29d78ddaf7f5897241cd8d56dbe'
             '5f7132636b6afe9f00dc450c58073c0829942fa44070e7ec5a2c227c485c83f076bdea081d207f926b44d02700be65bf19a61f5d8d1472edd480f980e6ffbc3a'
             'ed5ba22b37eaa9f4950ff3b57d60dd7866fcd5b8bd5197eab3170470528e8d91379483d3eb724589e695184f9b0ed506ebaee73ecca0dc40afdb5f35e79d178a'
             'c318b64a03da07dfe435b2d8c368e55b0ab567da78c57ed814a7864fa75aeac52b28cf562b4afd8daa52168af93b318c1fead557ee676e950af25d422c276a17'
             '18aaf9e7d6964d633688b5e814f85af3a4fe7dfe3f0042ca04ca4811064cdbcdfbfb28021b15efe45f98cc9fbf1cf23a98972cdbcfd4871b165278a0a1179072'
-            'fb2cee7ebf303d8405abfe7934d20999882c855ae3280bf1bfbf4d3955d4592b221f009a0220e981b0243907f9392aa1f41db1993f9c1ae19a7af55ac8bde8f7'
+            '5af6c3ffd02421586e81fac170f89ea30ac966719589ab4b4931498ab0071669faa44c7009516fd1d69bef2546dbba03bdf4604392de8ad5e1ada5170373c48e'
             'b3cc10f025ce59f19c21deed3476f309db2059ee48dd1467f64fdd5b198537c94a1b3eba822d6f8c79bfb394dccbd2ea5c8840f32900c8ba153900c2df77abd1'
             'fbcde2b98c16a0841dd04e709834755f50bd52137685ec724dc5b2699b008b77bf03ecddf0781b9f837c0f392a84e70536bc579ca3f8329a8f5fceaa39dd018c'
             'dcb0e59117f76d3230cc3666dedc8a171636816141af43802dc047a9d1855f66298d690259bc9b6b63d66c7488dcc4cb65f99c202d7b46705b70d0ad87644520'
@@ -48,13 +59,14 @@ sha512sums=('97d5644cd06c2a092338bddc6b5e5b4c538ae8055b5d7c9ea011a8454b191714864
             'dd4efa137462905f9e29a99d69b747ae35e58ba8152794bfa417325953dd5059bad96fabfabf73ce1ee2310dc4ab4d1b95c8d931d33b81c67addcb614a51be54'
             'ba277f765959ddb8aa0dee5a86cd9df1f40fb3f6ea1001f24825dbf21bd9342981d13894301170431729f76e710f70c23481e4061c64be29517ff497490f1ef3'
             '2c25c0e11a7b2d6d61e03f9afe7ba21f9497495ab02e85f2623ce8c71019fb8a1af16197ab3968d5da050c2188c3e67372aa43322ac91af84f7da61bf73596bc')
-b2sums=('f474963aafe63afec87ae113543aad1be000eb32df725254d28d44d1f4fa1bc7c0fac88d77ac58b9bf1dd67129e2c2d010e97368f5ba392bf3924dd8bfa3ebed'
-        'a84c41a2b2be6ab0f5f6c3ede13b28456deb7098421a6f1af0e72e53a9214efa30a59709c5b1e6c35031c4dfd15e786a691b69e592796d769cf057fb1d21379a'
+b2sums=('2b0d3001bb344a0d22ca9f6e8582cd0528652bb9c4698989425ee7ebf35514d9a05ecd5f55da2198e0543cc870620d2a796977adbc275e0aa97521f90dfbf325'
+        '1f6e88cc5817584c72fd2166d50217f06bf29c66b9317c7b9d1a331d8a8192ad189bdfb0e3f0c467916432e9e6a54891753324cfb9ac12396aee66a65dd851da'
+        'b06a21c5d4c349c8e9756022681085dc8a6bc4211a8e4700ccf10757a72a0da5e455f36adccfb41c1dd0d61d1df073c2a09e2074e10664f6de37a722c6d1401a'
         'dbab30d7e1b566027fec9d6a95dd41ed8f64399c39aac07fb4513ce21050eeeb4a226adfd513f76921c305945dfa4a140602ede574dd5eb4cd287e0f2df21714'
         '27a8dcbbe06fa7aea122fc87ca663710ae2179c995270d94e22c905422e2639f3c9c81eef6723467c76366062381d8bd65e84ef79f47fed7c240973a55f5cb0e'
         'a03b8a2ce6a606068cad278c6b8039181968c132a935448bf45e1b3668357487da1528569ed582b107db0654a1614b784a73c726729aad42abed18a4c15ce5b6'
         '50d5c0c235037b389ee7d5883ebe256287a0e53aba70f3d3571e460b029e8c4ec1a44ae7f08a8aca136504d9728f8a4ce768676ec5110af4a61ff8f19839faeb'
-        'fc2f424e0ccbeb21267bfcb4045ab7214af51b983495ff7baf6032e2395307873b220a95e5f29c7bc9e709cde246356f4a4d2c77521d8766d574ed3d5e5e362b'
+        '482d5249e79b14f3f3e4f51d66513f8e6802fef7574ee461c2440febbda8baf1a3e700b1f28774c17db9c0619898477a196110e6c50324a9ff04b002e88b4b96'
         '588c2c61496fa93392122e6927877df42826ab94b922e962b8541968d3baca343c699e9f244001782c9fc42ff84b684659aa1f29dde79dac66cd38b4b0499257'
         'b2dda66fb2ddb5ab63059c63773c56c035c51c9cb9856860340eb52d89796d7c109d4cff7d76a482aef8674c83b5fb389095b7d78c3b3217d7624366697f5d83'
         '4a3454dc3ad105fe17fd2620b2627e8949776176a7601216d77017fd276315852a3a584bea4f45c127ff250640e02ad319db006ef681b784f87039f7ee098bec'
@@ -69,172 +81,171 @@ b2sums=('f474963aafe63afec87ae113543aad1be000eb32df725254d28d44d1f4fa1bc7c0fac88
 case "${CARCH}" in
   x86_64) export GOARCH=amd64 ;;
   powerpc64le) export GOARCH=ppc64le ;;
+  riscv64) export GOARCH=riscv64 ;;
 esac
 
-prepare() {
-  cd "${pkgbase}-${pkgver}"
-  # the -tags can only be a space separated list
-  patch -Np1 -i ../"${pkgbase}-1.20.0-gotags.patch"
-  # set CGO_ENABLED
-  sed -E 's/(CGO_ENABLED)=0/\1=1/g' -i hack/lib/golang.sh
 
-  mkdir ${srcdir}/.tmp
+prepare() {
+  # the -tags can only be a space separated list
+  patch -Np1 -d $pkgbase-$pkgver -i ../$pkgbase-1.23.0-gotags.patch
+  # set static builds CGO_ENABLED=1 for full RELRO
+  patch -Np1 -d $pkgbase-$pkgver -i ../$pkgbase-1.23.0-static_cgo_enabled.patch
 }
 
 build() {
-  cd "${pkgbase}-${pkgver}"
-  export CGO_CPPFLAGS="${CPPFLAGS}"
-  export CGO_CFLAGS="${CFLAGS}"
-  export CGO_CXXFLAGS="${CXXFLAGS}"
-  export CGO_LDFLAGS="${LDFLAGS}"
+  export CGO_CPPFLAGS="$CPPFLAGS"
+  export CGO_CFLAGS="$CFLAGS"
+  export CGO_CXXFLAGS="$CXXFLAGS"
+  export CGO_LDFLAGS="$LDFLAGS"
   export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly -modcacherw"
   # NOTE: this also ensures the binaries have full RELRO
   export GOLDFLAGS="-linkmode=external"
 
+  mkdir ${srcdir}/.tmp
   export TMPDIR=${srcdir}/.tmp
 
-  make all KUBE_VERBOSE=5
+  make all KUBE_VERBOSE=5 -C $pkgbase-$pkgver
 
   # shell completion
   local _binary
+  mkdir -vp completions
   for _binary in {kubeadm,kubectl}; do
-    "_output/bin/${_binary}" completion bash > "_output/${_binary}"
-    "_output/bin/${_binary}" completion zsh > "_output/_${_binary}"
+    $pkgbase-$pkgver/_output/bin/$_binary completion bash > completions/$_binary
+    $pkgbase-$pkgver/_output/bin/$_binary completion zsh > completions/_$_binary
   done
+  $pkgbase-$pkgver/_output/bin/kubectl completion fish > completions/kubectl.fish
 
   # docs
-  hack/update-generated-docs.sh
+  (
+    cd $pkgbase-$pkgver
+    hack/update-generated-docs.sh
+  )
 }
 
 package_kubeadm() {
   pkgdesc='A tool for quickly installing Kubernetes and setting up a secure cluster'
-  groups=('kubernetes-tools')
-  depends+=('crictl')
-  install="${pkgname}.install"
+  groups=(kubernetes-tools)
+  depends=(glibc crictl)
+  install=$pkgname.install
 
-  cd "${pkgbase}-${pkgver}"
-  install -vDm 755 "_output/local/bin/linux/${GOARCH}/${pkgname}" -t "$pkgdir/usr/bin"
-  # service override for kubelet.service
-  install -vDm 644 "../10-${pkgname}-kubelet.conf" \
-    "${pkgdir}/usr/lib/systemd/system/kubelet.service.d/10-${pkgname}.conf"
-  # shell completion
-  install -vDm 644 "_output/${pkgname}" -t "$pkgdir/usr/share/bash-completion/completions/"
-  install -vDm 644 "_output/_${pkgname}" -t "$pkgdir/usr/share/zsh/site-functions/"
+  install -vDm 755 $pkgbase-$pkgver/_output/local/bin/linux/${GOARCH}/$pkgname -t "$pkgdir/usr/bin"
   # man pages
-  install -vDm 644 "docs/man/man1/${pkgname}"* -t "${pkgdir}/usr/share/man/man1/"
+  install -vDm 644 $pkgbase-$pkgver/docs/man/man1/$pkgname* -t "$pkgdir/usr/share/man/man1/"
+  # service override for kubelet.service
+  install -vDm 644 10-$pkgname-kubelet.conf "$pkgdir/usr/lib/systemd/system/kubelet.service.d/10-$pkgname.conf"
+  # shell completion
+  install -vDm 644 completions/$pkgname -t "$pkgdir/usr/share/bash-completion/completions/"
+  install -vDm 644 completions/_$pkgname -t "$pkgdir/usr/share/zsh/site-functions/"
 }
 
 package_kubectl() {
   pkgdesc='A command line tool for communicating with a Kubernetes API server'
-  groups=('kubernetes-tools')
+  depends=(glibc)
+  groups=(kubernetes-tools)
 
-  cd "${pkgbase}-${pkgver}"
-  install -vDm 755 "_output/local/bin/linux/${GOARCH}/${pkgname}" -t "$pkgdir/usr/bin"
+  install -vDm 755 $pkgbase-$pkgver/_output/local/bin/linux/${GOARCH}/$pkgname -t "$pkgdir/usr/bin"
   # man pages
-  install -vDm 644 "docs/man/man1/${pkgname}"* -t "$pkgdir/usr/share/man/man1"
+  install -vDm 644 $pkgbase-$pkgver/docs/man/man1/$pkgname* -t "$pkgdir/usr/share/man/man1"
   # shell completion
-  install -vDm 644 "_output/${pkgname}" -t "$pkgdir/usr/share/bash-completion/completions/"
-  install -vDm 644 "_output/_${pkgname}" -t "$pkgdir/usr/share/zsh/site-functions/"
+  install -vDm 644 completions/$pkgname -t "$pkgdir/usr/share/bash-completion/completions/"
+  install -vDm 644 completions/_$pkgname -t "$pkgdir/usr/share/zsh/site-functions/"
+  install -vDm 644 completions/$pkgname.fish -t "$pkgdir/usr/share/fish/vendor_completions.d/"
 }
 
 package_kubelet() {
   pkgdesc='An agent that runs on each node in a Kubernetes cluster making sure that containers are running in a Pod'
-  groups=('kubernetes-control-plane' 'kubernetes-node')
-  depends+=('cni-plugins' 'conntrack-tools' 'ethtool' 'iptables-nft' 'socat')
-  optdepends=('containerd: for using the containerd container runtime'
-              'cri-o: for using the cri-o container runtime'
-              'docker: for using the docker container runtime')
-  backup=('etc/kubernetes/kubelet.env')
-  install="${pkgname}.install"
+  groups=(kubernetes-control-plane kubernetes-node)
+  depends=(cni-plugins conntrack-tools ethtool glibc iptables-nft socat)
+  optdepends=(
+    'containerd: for using the containerd container runtime'
+    'cri-o: for using the cri-o container runtime'
+    'docker: for using the docker container runtime'
+  )
+  backup=(etc/$pkgbase/$pkgname.env)
+  install=$pkgname.install
 
-  cd "${pkgbase}-${pkgver}"
-  install -vDm 755 "_output/local/bin/linux/${GOARCH}/${pkgname}" -t "$pkgdir/usr/bin"
-  # config
-  install -vDm 644 "../${pkgname}.env" -t "$pkgdir/etc/kubernetes/"
-  # service
-  install -vDm 644 "../${pkgname}.service" -t "$pkgdir/usr/lib/systemd/system"
-  # modules
-  install -vDm 644 "../${pkgname}-modules.conf" \
-    "${pkgdir}/usr/lib/modules-load.d/${pkgname}.conf"
-  # sysctl
-  install -vDm 644 "../50-${pkgname}-sysctl.conf" \
-    "${pkgdir}/etc/sysctl.d/50-${pkgname}.conf"
+  install -vDm 755 $pkgbase-$pkgver/_output/local/bin/linux/${GOARCH}/$pkgname -t "$pkgdir/usr/bin"
   # man pages
-  install -vDm 644 "docs/man/man1/${pkgname}"* -t "${pkgdir}/usr/share/man/man1/"
+  install -vDm 644 $pkgbase-$pkgver/docs/man/man1/$pkgname* -t "$pkgdir/usr/share/man/man1/"
+  # config
+  install -vDm 644 $pkgname.env -t "$pkgdir/etc/kubernetes/"
+  # service
+  install -vDm 644 $pkgname.service -t "$pkgdir/usr/lib/systemd/system"
+  # modules
+  install -vDm 644 $pkgname-modules.conf "$pkgdir/usr/lib/modules-load.d/$pkgname.conf"
+  # sysctl
+  install -vDm 644 50-$pkgname-sysctl.conf "$pkgdir/etc/sysctl.d/50-$pkgname.conf"
   # NOTE: without this directory a node worker will emit error messages upon joining a cluster
-  install -vdm 700 "${pkgdir}/etc/kubernetes/manifests"
+  install -vdm 700 "$pkgdir/etc/kubernetes/manifests"
 }
 
 package_kube-apiserver() {
   pkgdesc='Kubernetes control plane component exposing the Kubernetes API'
-  groups=('kubernetes-control-plane')
-  backup=('etc/kubernetes/kube-apiserver.env')
+  depends=(glibc kubernetes-control-plane-common)
+  groups=(kubernetes-control-plane)
+  backup=(etc/$pkgbase/$pkgname.env)
 
-  cd "${pkgbase}-${pkgver}"
-  install -vDm 755 "_output/local/bin/linux/${GOARCH}/${pkgname}" -t "$pkgdir/usr/bin"
-  # config
-  install -vDm 644 "../${pkgname}.env" -t "${pkgdir}/etc/kubernetes/"
-  # service
-  install -vDm 644 "../${pkgname}.service" -t "${pkgdir}/usr/lib/systemd/system/"
-  # sysusers.d
-  install -vDm 644 "../kubernetes-sysusers.conf" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  # tmpfiles.d
-  install -vDm 644 "../kubernetes-tmpfiles.conf" "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
+  install -vDm 755 $pkgbase-$pkgver/_output/local/bin/linux/${GOARCH}/$pkgname -t "$pkgdir/usr/bin"
   # man pages
-  install -vDm 644 "docs/man/man1/${pkgname}"* -t "${pkgdir}/usr/share/man/man1/"
+  install -vDm 644 $pkgbase-$pkgver/docs/man/man1/$pkgname* -t "$pkgdir/usr/share/man/man1/"
+  # config
+  install -vDm 644 $pkgname.env -t "$pkgdir/etc/kubernetes/"
+  # service
+  install -vDm 644 $pkgname.service -t "$pkgdir/usr/lib/systemd/system/"
 }
 
 package_kube-controller-manager() {
   pkgdesc='Kubernetes control plane component that runs controller processes'
-  groups=('kubernetes-control-plane')
-  backup=("etc/kubernetes/${pkgname}.env")
+  depends=(glibc kubernetes-control-plane-common)
+  groups=(kubernetes-control-plane)
+  backup=(etc/$pkgbase/$pkgname.env)
 
-  cd "${pkgbase}-${pkgver}"
-  install -Dm 755 "_output/local/bin/linux/${GOARCH}/${pkgname}" -t "$pkgdir/usr/bin"
-  # config
-  install -vDm 644 "../${pkgname}.env" -t "${pkgdir}/etc/kubernetes/"
-  # service
-  install -vDm 644 "../${pkgname}.service" -t "${pkgdir}/usr/lib/systemd/system/"
-  # sysusers.d
-  install -vDm 644 "../kubernetes-sysusers.conf" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  # tmpfiles.d
-  install -vDm 644 "../kubernetes-tmpfiles.conf" "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
+  install -vDm 755 $pkgbase-$pkgver/_output/local/bin/linux/${GOARCH}/$pkgname -t "$pkgdir/usr/bin"
   # man pages
-  install -vDm 644 "docs/man/man1/${pkgname}"* -t "${pkgdir}/usr/share/man/man1/"
+  install -vDm 644 $pkgbase-$pkgver/docs/man/man1/$pkgname* -t "$pkgdir/usr/share/man/man1/"
+  # config
+  install -vDm 644 $pkgname.env -t "$pkgdir/etc/kubernetes/"
+  # service
+  install -vDm 644 $pkgname.service -t "$pkgdir/usr/lib/systemd/system/"
 }
 
 package_kube-proxy() {
   pkgdesc='Kubernetes network proxy that runs on each node'
-  groups=('kubernetes-control-plane' 'kubernetes-node')
-  backup=("etc/kubernetes/${pkgname}.env")
+  depends=(glibc kubernetes-control-plane-common)
+  groups=(kubernetes-control-plane kubernetes-node)
+  backup=(etc/$pkgbase/$pkgname.env)
 
-  cd "${pkgbase}-${pkgver}"
-  install -Dm 755 "_output/local/bin/linux/${GOARCH}/${pkgname}" -t "$pkgdir/usr/bin/"
-  # config
-  install -vDm 644 "../${pkgname}.env" -t "${pkgdir}/etc/kubernetes/"
-  # service
-  install -vDm 644 "../${pkgname}.service" -t "${pkgdir}/usr/lib/systemd/system/"
+  install -vDm 755 $pkgbase-$pkgver/_output/local/bin/linux/${GOARCH}/$pkgname -t "$pkgdir/usr/bin/"
   # man pages
-  install -vDm 644 "docs/man/man1/${pkgname}"* -t "${pkgdir}/usr/share/man/man1/"
-  install -vdm 755 "${pkgdir}/etc/kubernetes/"
-  install -vdm 755 "${pkgdir}/var/lib/${pkgname}/"
+  install -vDm 644 $pkgbase-$pkgver/docs/man/man1/$pkgname* -t "$pkgdir/usr/share/man/man1/"
+  # config
+  install -vDm 644 $pkgname.env -t "$pkgdir/etc/kubernetes/"
+  # service
+  install -vDm 644 $pkgname.service -t "$pkgdir/usr/lib/systemd/system/"
+  install -vdm 755 "$pkgdir/etc/$pkgbase/"
+  install -vdm 755 "$pkgdir/var/lib/$pkgname/"
 }
 
 package_kube-scheduler() {
   pkgdesc='Kubernetes control plane component watching over pods on nodes'
-  groups=('kubernetes-control-plane')
-  backup=("etc/kubernetes/${pkgname}.env")
+  depends=(glibc kubernetes-control-plane-common)
+  groups=(kubernetes-control-plane)
+  backup=(etc/$pkgbase/$pkgname.env)
 
-  cd "${pkgbase}-${pkgver}"
-  install -Dm 755 "_output/local/bin/linux/${GOARCH}/${pkgname}" -t "$pkgdir/usr/bin"
-  # config
-  install -vDm 644 "../${pkgname}.env" -t "${pkgdir}/etc/kubernetes/"
-  # service
-  install -vDm 644 "../${pkgname}.service" -t "${pkgdir}/usr/lib/systemd/system/"
-  # sysusers.d
-  install -vDm 644 "../kubernetes-sysusers.conf" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  # tmpfiles.d
-  install -vDm 644 "../kubernetes-tmpfiles.conf" "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
+  install -vDm 755 $pkgbase-$pkgver/_output/local/bin/linux/${GOARCH}/$pkgname -t "$pkgdir/usr/bin"
   # man pages
-  install -vDm 644 "docs/man/man1/${pkgname}"* -t "${pkgdir}/usr/share/man/man1/"
+  install -vDm 644 $pkgbase-$pkgver/docs/man/man1/$pkgname* -t "$pkgdir/usr/share/man/man1/"
+  # config
+  install -vDm 644 $pkgname.env -t "$pkgdir/etc/kubernetes/"
+  # service
+  install -vDm 644 $pkgname.service -t "$pkgdir/usr/lib/systemd/system/"
+}
+
+package_kubernetes-control-plane-common() {
+  pkgdesc='Common files for Kubernetes control plane packages'
+
+  # sysusers.d
+  install -vDm 644 $pkgbase-sysusers.conf "$pkgdir/usr/lib/sysusers.d/$pkgname.conf"
+  # tmpfiles.d
+  install -vDm 644 $pkgbase-tmpfiles.conf "$pkgdir/usr/lib/tmpfiles.d/$pkgname.conf"
 }
