--- a/libunistring/PKGBUILD
+++ b/libunistring/PKGBUILD
@@ -1,22 +1,27 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer:  Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
+# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: Sergej Pupykin <pupykin.s+arch@gmail.com>
 # Contributor: Emmanuel 'guinness' Boudreault
 # Contributor: Patrick McCarty <pnorcks at gmail dot com>
 
 pkgname=libunistring
-pkgver=0.9.10
-pkgrel=3
+pkgver=1.0
+pkgrel=1
 pkgdesc='Library for manipulating Unicode strings and C strings'
 url='https://www.gnu.org/software/libunistring/'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
 depends=(glibc)
+provides=('libunistring.so')
 source=(https://ftp.gnu.org/gnu/$pkgname/${pkgname}-${pkgver}.tar.xz{,.sig})
-validpgpkeys=('462225C3B46F34879FC8496CD605848ED7E69871') # Daiki Ueno <ueno@unixuser.org>
-md5sums=('db08bb384e81968957f997ec9808926e'
-         'SKIP')
+validpgpkeys=('462225C3B46F34879FC8496CD605848ED7E69871'  # Daiki Ueno <ueno@unixuser.org>
+              '9001B85AF9E1B83DF1BDA942F5BE8B267C6A406D') # Bruno Haible (Open Source Development) <bruno@clisp.org>
+sha256sums=('5bab55b49f75d77ed26b257997e919b693f29fd4a1bc22e0e6e024c246c72741'
+            'SKIP')
+b2sums=('8208fe33d4ac2f015b0efb56b0c7dd87afc4bb1c6ca4eb3ded86d7e2101d7b7f68bfd8991af4b6dd408282ec73f134ee0b884e761ff6d52e8a1e398326aec420'
+        'SKIP')
 
 prepare() {
   cd $pkgname-$pkgver
@@ -37,3 +42,5 @@ check() {
 package() {
   make -C $pkgname-$pkgver DESTDIR="$pkgdir" install
 }
+
+# vim: ts=2 sw=2 et:
