--- a/luajit/PKGBUILD
+++ b/luajit/PKGBUILD
@@ -9,24 +9,24 @@
 pkgname=luajit
 # LuaJIT has abandoned versioned releases and now advises using git HEAD
 # https://github.com/LuaJIT/LuaJIT/issues/665#issuecomment-784452583
-_commit=20aea93915a0d31138cb00e17cc15eb849e3b806
-pkgver="2.1.0.beta3.r397.g${_commit::8}"
+_commit=1b8d8cabdcc4f1977dc8c51a82074653078d870b
+pkgver="2.1.0.beta3.r409.g${_commit::8}"
 pkgrel=1
 pkgdesc='Just-in-time compiler and drop-in replacement for Lua 5.1'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc)
 url='https://luajit.org/'
 license=('MIT')
 depends=('gcc-libs')
 options=('debug')
 source=("LuaJIT-${_commit}.tar.gz::https://repo.or.cz/luajit-2.0.git/snapshot/${_commit}.tar.gz")
-md5sums=('20e8dfb64c907f5755cd99ebed02df9f')
-sha256sums=('a2190947126306f2d137ae8a6fc6b04f4f1cf6460216f4ee0e208ff95cdd1e35')
-b2sums=('895f07f17f24010bf8f5ed88887dd42660a805b1b243b09047a3b2055813d66986a6095265a9a7f5f28ffccbe92e3c868775029bf71f2be33e2da02cbed886fa')
+md5sums=('9f4be58cc59179cc696eac507b0879cb')
+sha256sums=('369882937289a81e178505a34842d8fe0a02dcdd707e1c57111cf2a6a90fa0e5')
+b2sums=('f8079977d59edf42748e3e2dc0639b314703eca9ad7d2e6b86e6a0af6869cbd95ecd48e8ecbd0252745c1401822af9515d4bbd7dd878897aa20a2dfe5dbf7355')
 
 build() {
   cd "luajit-2.0-${_commit::7}"
   # Avoid early stripping
-  make amalg PREFIX=/usr BUILDMODE=dynamic TARGET_STRIP=" @:"
+  make amalg PREFIX=/usr TARGET_STRIP=" @:"
 }
 
 package() {
