--- a/unixodbc/PKGBUILD
+++ b/unixodbc/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=unixodbc
-pkgver=2.3.9
+pkgver=2.3.11
 pkgrel=1
 pkgdesc="ODBC is an open specification for providing application developers with a predictable API with which to access Data Sources"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -13,12 +13,12 @@ url="http://www.unixodbc.org/"
 backup=('etc/odbc.ini' 'etc/odbcinst.ini')
 depends=('readline' 'libltdl')
 source=(ftp://ftp.unixodbc.org/pub/unixODBC/unixODBC-$pkgver.tar.gz)
-sha256sums=('52833eac3d681c8b0c9a5a65f2ebd745b3a964f208fc748f977e44015a31b207')
+sha256sums=('d9e55c8e7118347e3c66c87338856dad1516b490fb7c756c1562a2c267c73b5c')
 
 build() {
     cd unixODBC-${pkgver}
-    ./configure --prefix=/usr --sysconfdir=/etc \
-                --build=${CHOST}
+    ./configure --prefix=/usr --sysconfdir=/etc --build=${CHOST}
+    sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
     make
 }
 
