--- a/python/blockdiag/PKGBUILD
+++ b/python/blockdiag/PKGBUILD
@@ -3,19 +3,19 @@
 # Contributor: David Runge <dvzrv@archlinux.org>
 
 pkgname=blockdiag
-pkgver=2.0.1
-pkgrel=6
+pkgver=3.0.0
+pkgrel=1
 pkgdesc="blockdiag generates block-diagram image from text"
 url="http://blockdiag.com"
 license=('Apache')
-arch=('any')
+arch=(any)
 depends=('python-setuptools' 'python-funcparserlib' 'python-pillow' 'python-webcolors')
 checkdepends=('python-nose' 'python-mock' 'python-pycodestyle' 'python-reportlab' 'python-docutils'
               'python-wand' 'ghostscript' 'librsvg')
 optdepends=('python-reportlab: for PDF export'
             'python-docutils: for RST parser')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/blockdiag/blockdiag/archive/$pkgver.tar.gz")
-sha512sums=('509535312bd46022203d279604507e09106680722d98516dabd7187bc48d9a195709f2534f2f7757058c06b914b517ec2f6d899cec12e7df24ba4ab28ec76bcd')
+sha512sums=('9eb5aa0d78dd546feafccdf66dbedbc8b8addb97ffa45f18396bfb8e144be3acfaa4493baf680922af87ff64194424b7378367f177b1a59c3b3898b5c235623c')
 
 build() {
   cd blockdiag-$pkgver
@@ -26,8 +26,8 @@ check() {
   local site_packages=$(python -c "import site; print(site.getsitepackages()[0])")
   cd blockdiag-$pkgver
   python setup.py install --root="$PWD/tmp_install" --optimize=1
-  # TODO: figure out the failure
-  PYTHONPATH="$PWD/tmp_install/${site_packages}" nosetests -v -e "test_setup_inline_svg_is_true_with_multibytes"
+  # https://github.com/blockdiag/blockdiag/issues/165
+  PYTHONPATH="$PWD/tmp_install/${site_packages}" nosetests -v -e "svg_sanitizes_url_on_error_test"
 }
 
 package() {
