--- a/mariadb/PKGBUILD
+++ b/mariadb/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=mariadb
 pkgname=('mariadb-libs' 'mariadb-clients' 'mariadb' 'mytop')
 pkgdesc='Fast SQL database server, derived from MySQL'
-pkgver=10.7.3
+pkgver=10.8.3
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
@@ -20,7 +20,7 @@ validpgpkeys=('199369E5404BD5FC7D2FE43BCBCB082A1BB943DB') # MariaDB Package Sign
 # https://mariadb.com/kb/en/library/mirror-sites-for-mariadb/
 source=("https://rsync.osuosl.org/pub/mariadb/mariadb-${pkgver}/source/mariadb-${pkgver}.tar.gz"{,.asc}
         '0001-arch-specific.patch')
-sha256sums=('da286919ffc9c913282202349709b6ba4ebcd342815e8dae0aa6b6bd8f515cd4'
+sha256sums=('887eadc55176ac1ead1fccfc89ade4b5990ef192745ad4dcd879acb41c050892'
             'SKIP'
             '3289efb3452d199aec872115f35da3f1d6fd4ce774615076690e9bc8afae1460')
 
@@ -195,7 +195,9 @@ package_mariadb() {
   mv usr/share/doc/mariadb/COPYING* usr/share/licenses/mariadb/
 
   # move it where one might look for it
-  #mv usr/share/{groonga{,-normalizer-mysql},doc/mariadb/}
+  case "${CARCH}" in
+    powerpc64le|x86_64) mv usr/share/{groonga{,-normalizer-mysql},doc/mariadb/} ;;
+  esac
 
   # move to pam directories
   install -d {etc,usr/lib}/security
@@ -213,7 +215,7 @@ package_mariadb() {
   rm -r usr/share/aclocal
   rm usr/lib/lib*
   rm -r usr/lib/pkgconfig
-  rm usr/lib/mysql/plugin/{auth_gssapi_client,caching_sha2_password,client_ed25519,dialog,mysql_clear_password,sha256_password}.so
+  rm usr/lib/mysql/plugin/{auth_gssapi_client,caching_sha2_password,client_ed25519,dialog,mysql_clear_password,sha256_password,zstd}.so
 
   # provided by mariadb-clients
   rm usr/bin/mysql{,_plugin,_upgrade,admin,binlog,check,dump,import,show,slap,test}
