--- a/r/PKGBUILD
+++ b/r/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=r
 pkgver=4.2.0
-pkgrel=2
+pkgrel=4
 pkgdesc='Language and environment for statistical computing and graphics'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
@@ -36,7 +36,9 @@ prepare() {
 
 build() {
   cd R-$pkgver
+# -ffat-lto-objects is needed for third-party packages shipping static libraries
   CFLAGS+=" -ffat-lto-objects" \
+  CXXFLAGS+=" -ffat-lto-objects" \
   ./configure  --prefix=/usr \
                --libdir=/usr/lib \
                --sysconfdir=/etc/R \
@@ -85,4 +87,12 @@ package() {
 
 # Install ld.so.conf.d file to ensure other applications access the shared lib
   install -Dm644 "$srcdir"/R.conf -t "$pkgdir"/etc/ld.so.conf.d
+
+# Add provides for bundled packages
+  for _f in "$pkgdir"/usr/lib/R/library/*/DESCRIPTION; do
+    _pkg=$(grep Package: $_f | cut -d' ' -f2 | tr '[:upper:]' '[:lower:]')
+    _ver=$(grep Version $_f | cut -d' ' -f2)
+    _prov="r-$_pkg=${_ver/-/.}"
+    provides+=($_prov)
+  done
 }
