--- a/rust/PKGBUILD
+++ b/rust/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Johannes Löthberg <johannes@kyriasis.com>
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Alexander F Rødseth <xyproto@archlinux.org>
@@ -6,9 +7,8 @@
 
 pkgbase=rust
 pkgname=(rust rust-wasm rust-src)
-[ "${CARCH}" = 'x86_64' ] && pkgname+=(lib32-rust-libs rust-musl)
 epoch=1
-pkgver=1.60.0
+pkgver=1.61.0
 pkgrel=1
 pkgdesc="Systems programming language focused on safety, speed and concurrency"
 url=https://www.rust-lang.org/
@@ -28,14 +28,14 @@ source=(
   0002-compiler-Change-LLVM-targets.patch
   0003-compiler-Use-wasm-ld-for-wasm-targets.patch
 )
-sha256sums=('20ca826d1cf674daf8e22c4f8c4b9743af07973211c839b85839742314c838b7'
+sha256sums=('ad0b4351675aa9abdf4c7e066613bd274c4391c5506db152983426376101daed'
             'SKIP'
             '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
             'SKIP'
-            '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
-            '7a69e38716957ff074c5f932a82bbea1d9a3713a3f39d9085977cdc8df336c43'
-            '2ef851be0562d13431c5c81df0161f92984e79845fe986182225f2dae58a9452'
-            'f8ea25693ba42c7e185aa8677218783fe0cd60a3370926cb6996ec898b43d691')
+            'c901a9bb036c29ca092f7dbc8b447efdd9aa1044a902a88f9d024cb22681dc19'
+            '60c6dfc100d292284af2187cfefc1d0d928139ca557d27bc6bef88edefccff70'
+            '8dcb566da29a92ecf3eb6afe094d9c7766d08230d90fd666bfd022c018ae676a'
+            '26bf232d144b81a303ed91f6a331ddf004c5d9fefd41a11e36b61812a34459aa')
 validpgpkeys=(108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               474E22316ABF4785A88C6E8EA2C794A986419D8A  # Tom Stellard <tstellar@redhat.com>
               B6C8F98282B944E3B0D5C2530FC3042E345AD05D) # Hans Wennborg <hans@chromium.org>
@@ -43,27 +43,33 @@ validpgpkeys=(108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE  # Rust Language (Tag and
 case "${CARCH}" in
   powerpc64le)
     _rust_target='powerpc64le-unknown-linux-gnu'
+    _build_tools='"cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
     _config_targets='"powerpc64le-unknown-linux-gnu","wasm32-unknown-unknown","wasm32-wasi"'
     _config_target_extras=''
+    pkgname+=(rust-wasm)
   ;;
   powerpc)
     _rust_target='powerpc-unknown-linux-gnu'
-    _config_targets='"powerpc-unknown-linux-gnu","wasm32-unknown-unknown","wasm32-wasi"'
+    _build_tools='"cargo", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
+    _config_targets='"powerpc-unknown-linux-gnu"'
     _config_target_extras=''
   ;;
   riscv64)
     _rust_target='riscv64gc-unknown-linux-gnu'
+    _build_tools='"cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
     _config_targets='"riscv64gc-unknown-linux-gnu","wasm32-unknown-unknown","wasm32-wasi"'
     _config_target_extras=''
+    pkgname+=(rust-wasm)
   ;;
   x86_64)
     _rust_target="${CHOST}"
+    _build_tools='"cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
     _config_targets='"x86_64-unknown-linux-gnu","i686-unknown-linux-gnu","x86_64-unknown-linux-musl","wasm32-unknown-unknown","wasm32-wasi"'
     _config_target_extras='[target.x86_64-unknown-linux-musl]
 sanitizers = false
 musl-root = "/usr/lib/musl"'
+    pkgname+=(rust-wasmi lib32-rust-libs rust-musl)
   ;;
-  *) echo ":: Architecture is unsupported!"; return 1 ;;
 esac
 
 prepare() {
@@ -96,7 +102,7 @@ rustc = "/usr/bin/rustc"
 rustfmt = "/usr/bin/rustfmt"
 locked-deps = true
 vendor = true
-tools = ["cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"]
+tools = [${_build_tools}]
 sanitizers = true
 profiler = true
 
@@ -120,6 +126,9 @@ jemalloc = true
 # http://blog.llvm.org/2019/09/closing-gap-cross-language-lto-between.html
 # https://github.com/rust-lang/rust/issues/54872
 codegen-units-std = 1
+
+# musl target produces warnings
+deny-warnings = false
 
 [dist]
 compression-formats = ["gz"]
@@ -188,8 +197,8 @@ build() {
       _pick dest-musl usr/lib/rustlib/x86_64-unknown-linux-musl
     ;;
   esac
-    
-  _pick dest-wasm usr/lib/rustlib/wasm32-*
+
+  [[ ! "${CARCH}" = 'powerpc' ]] && _pick dest-wasm usr/lib/rustlib/wasm32-*
   _pick dest-src  usr/lib/rustlib/src
 }
 
