--- a/librsvg/PKGBUILD
+++ b/librsvg/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=librsvg
 pkgname=(librsvg librsvg-docs)
-pkgver=2.54.1
+pkgver=2.54.3
 pkgrel=1
 epoch=2
 pkgdesc="SVG rendering library"
@@ -15,7 +15,7 @@ depends=(cairo freetype2 gdk-pixbuf2 glib2 harfbuzz libxml2 pango)
 makedepends=(gobject-introspection vala git rust gi-docgen python-docutils)
 checkdepends=(ttf-dejavu)
 options=(debug)
-_commit=f6dfe9e247c36a6005c4cc75db39c6eef767d1af  # tags/2.54.1^0
+_commit=63ef9f647f02fffed298e46de61a8a671acbd911  # tags/2.54.3^0
 source=("git+https://gitlab.gnome.org/GNOME/librsvg.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -37,7 +37,7 @@ export CARGO_PROFILE_RELEASE_DEBUG=2
 
 build() {
   cd librsvg
-  ./configure --prefix=/usr --disable-static --enable-vala
+  ./configure --prefix=/usr --disable-static --enable-vala --enable-gtk-doc
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0 /g' libtool
   make
 }
