--- a/vim/PKGBUILD
+++ b/vim/PKGBUILD
@@ -1,5 +1,6 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Morten Linderud <foxboron@archlinux.org>
 # Contributor: Anatol Pomozov <anatol.pomozov@gmail.com>
 # Contributor: Thomas Dziedzic <gostrc@gmail.com>
 # Contributor: Jan "heftig" Steffens <jan.steffens@gmail.com>
@@ -10,24 +11,25 @@
 
 pkgbase=vim
 pkgname=('vim' 'gvim' 'vim-runtime')
-pkgver=8.2.4827
+pkgver=8.2.5046
 _versiondir=82
 pkgrel=1
 pkgdesc='Vi Improved, a highly configurable, improved version of the vi text editor'
 url='https://www.vim.org'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom:vim')
+options=(debug)
 makedepends=('glibc' 'libgcrypt' 'gpm' 'python' 'ruby' 'libxt' 'gtk3' 'lua'
              'gawk' 'tcl' 'pcre' 'zlib' 'libcanberra')
 source=(https://github.com/vim/vim/archive/v${pkgver}/${pkgbase}-${pkgver}.tar.gz
         vimrc
         archlinux.vim
         vimdoc.hook)
-sha256sums=('3303a94d0a7260c49542f4e552b66c05b825bcc48ae0065a5c50133c72e0f33b'
+sha256sums=('6b97bb6af9201d5a1ade552fcd4e7982ffb5ff008a3f8777c2b6397bc65014b7'
             'b16e85e457397ab2043a7ee0a3c84307c6b4eac157fd0b721694761f25b3ed5b'
             'cc3d931129854c298eb22e993ec14c2ad86cc1e70a08a64496f5e06559289972'
             '8e9656934d9d7793063230d15a689e10455e6db9b9fe73afa0f294792795d8ae')
-sha512sums=('f3437e5c3f7f8184d62102f2191fe39e8f6e3751c1d2aa86bb2802ccb7ac992bea10ac0bf75370674605c59a9fc6cc7b6c849f4d72a60f2c68bb7794d758ec29'
+sha512sums=('8d1f19b7d2a8f1220bccce9a2314044fc1a6aa9fef6252ec24a9c424c5f36f598276672e4d23b58657eb23e1e5651ff29a2a030382c56ab2a459ec277a76ef88'
             '4b5bed0813f22af9e158ea9aa56a4a9862dd786ba2d201f20159ccf652da6190164aaed0b6b7217d578f7b25c33a8adcc307bfcf3caa8d173a7ff29e2a00fee7'
             'fe091d289d876f45319c898f6021ef86d6a238b540c225a279c46efc5c36fa7d868cd0cee73a111811c4be90df160f85340bb251be3a437727dbe5c699950363'
             'a02ad0d66f300160911aeb81d8886c6c558436ac4ee3fcd161dd65c6b1e5d1f41b9005a7f5bb5ba68d57027fc1c8e43daabf055bd6207fb5a216a67f758df8d1')
@@ -132,14 +134,14 @@ package_vim-runtime() {
 package_vim() {
   depends=("vim-runtime=${pkgver}-${pkgrel}" 'gpm' 'acl' 'glibc' 'libgcrypt' 'pcre'
            'zlib')
-  optdepends=('python: Python 3 language support'
+  optdepends=('python: Python language support'
               'ruby: Ruby language support'
               'lua: Lua language support'
               'perl: Perl language support'
               'tcl: Tcl language support')
-  conflicts=('gvim' 'vim-minimal' 'vim-python3')
-  provides=('xxd' 'vim-minimal' 'vim-python3' 'vim-plugin-runtime')
-  replaces=('vim-python3' 'vim-minimal')
+  conflicts=('gvim' 'vim-minimal')
+  provides=('xxd' 'vim-minimal' 'vim-plugin-runtime')
+  replaces=('vim-minimal')
 
   cd vim-${pkgver}
   make -j1 VIMRCLOC=/etc DESTDIR="${pkgdir}" install
@@ -170,14 +172,13 @@ package_gvim() {
   pkgdesc+=' (with advanced features, such as a GUI)'
   depends=("vim-runtime=${pkgver}-${pkgrel}" 'gpm' 'libxt' 'gtk3' 'glibc' 'libgcrypt' 'pcre'
            'zlib' 'libcanberra')
-  optdepends=('python: Python 3 language support'
+  optdepends=('python: Python language support'
               'ruby: Ruby language support'
               'lua: Lua language support'
               'perl: Perl language support'
               'tcl: Tcl language support')
   provides=("vim=${pkgver}-${pkgrel}" "xxd" 'vim-plugin-runtime')
   conflicts=('vim-minimal' 'vim')
-  replaces=('gvim-python3')
 
   cd gvim-${pkgver}
   make -j1 VIMRCLOC=/etc DESTDIR="${pkgdir}" install
