--- a/qt5/qt5-declarative/PKGBUILD
+++ b/qt5/qt5-declarative/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-declarative
-_basever=5.15.3
-pkgver=5.15.3+kde+r20
+_basever=5.15.4
+pkgver=5.15.4+kde+r19
 pkgrel=1
-_commit=02105099301450c890e1caba977ef44efdc43da7
+_commit=2454c808bfe99b50084aea59adb917e805c27afa
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
@@ -27,7 +27,7 @@ options=(debug)
 
 pkgver() {
   cd $_pkgfqn
-  echo "5.15.2+kde+r"`git rev-list --count origin/5.15.2..$_commit`
+  echo "$_basever+kde+r"`git rev-list --count v$_basever-lts-lgpl..$_commit`
 }
 
 prepare() {
